fix table on mobile? maybe?

--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,7 @@ table {
   border-spacing: 5px;
   border-radius:10px;
   margin-top: 0px;
-  width: 70%;
+  width: 70vw;
 }
 
 
